--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@media screen and (max-width: 994px) {
+  .jumbotron h1 {
+    font-size: 25px;
+  }
+  .jumbotron p {
+    font-size: 16px;
+  }
+}
+
 .jumbotron {
   padding-top: 6rem;
   background-color: #e2edff;
