--- a/style.css
+++ b/style.css
@@ -5,11 +5,8 @@
   .jumbotron p {
     font-size: 16px;
   }
-  .img-custom {
-    width: 180px;
-  }
   body {
-    font-size: 14px;
+    overflow-x: hidden;
   }
 }
 
