--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
   .jumbotron p {
     font-size: 16px;
   }
-  body {
-    overflow-x: hidden;
+  .img-custom {
+    width: 180px !important;
   }
 }
 
